# node-editor

./: .gitignore  CMakeLists.txt  README.md
include/node_editor/: node_editor.hpp
include/node_viewer/: node.hpp  node_viewer.hpp
src/: main.cpp
src/node_editor/: node_editor.cpp
src/node_viewer/: node.cpp  node_viewer.cpp
